--- a/css/styles.css
+++ b/css/styles.css
@@ -6,77 +6,19 @@ html, body, #map {
   padding: 0;
 }
 
-/* Ajustes generales para el cuerpo */
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
-  overflow: hidden;
+/* Contenedor para la barra de color */
+#colorbars-container {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  top: 50%; /* Ocupa desde la mitad hasta el borde inferior */
+  width: 40px; /* Ancho ajustado a la imagen */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-/* Personalización del control de pantalla completa */
-.leaflet-control-fullscreen {
-  background-color: #ffffff;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 8px;
-  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
-}
-.leaflet-control-fullscreen:hover {
-  background-color: #e8e8e8;
-}
-
-/* Personalización del control de capas */
-.leaflet-control-layers {
-  background: rgba(255, 255, 255, 0.9);
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-}
-.leaflet-control-layers-expanded {
-  max-height: 200px;
-  overflow-y: auto;
-}
-
-/* Personalización del control de escala */
-.leaflet-control-scale {
-  font-size: 12px;
-  background: rgba(255, 255, 255, 0.8);
-  padding: 4px;
-  border-radius: 3px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
-}
-
-/* Personalización del control Locate */
-.leaflet-control-locate {
-  background-color: #ffffff;
-  border: 1px solid #ccc;
-  padding: 6px;
-  border-radius: 5px;
-  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
-}
-.leaflet-control-locate:hover {
-  background-color: #e8e8e8;
-}
-.leaflet-control-locate.active {
-  background-color: #007bff;
-  color: #fff;
-}
-
-/* Personalización de coordenadas de control de mouse */
-.leaflet-control-mouseposition {
-  background-color: rgba(255, 255, 255, 0.8);
-  padding: 5px;
-  font-size: 12px;
-  border-radius: 3px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
-  margin-bottom: 10px;
-}
-
-/* Otros ajustes y animaciones */
-.leaflet-container a.leaflet-popup-close-button {
-  color: #333;
-}
-.leaflet-popup-content-wrapper {
-  border-radius: 5px;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+#colorbars-container img {
+  width: 100%;
+  object-fit: contain;
 }
